fix: update charcoal color token to upper greys

--- a/docs/lib/sage-frontend/stylesheets/docs/_code.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_code.scss
@@ -28,7 +28,7 @@
   }
 }
 pre .nocode {
-  color: sage-color(charcoal, 500);
+  color: sage-color(grey, 950);
   background-color: none;
 }
 pre .str { /* string */
