--- a/docs/lib/sage-frontend/stylesheets/docs/_rouge_theme.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_rouge_theme.scss
@@ -1,15 +1,15 @@
 // background
 $-color-1: sage-color(grey, 200);
 // Whitespace
-$-color-24: sage-color(charcoal, 200);
+$-color-24: sage-color(grey, 700);
 // Name entity
-$-color-20: sage-color(charcoal, 400);
+$-color-20: sage-color(grey, 900);
 // Operators, numbers
-$-color-6: sage-color(charcoal, 300);
+$-color-6: sage-color(grey, 800);
 // Heading and prompt
-$-color-9: sage-color(charcoal, 400);
+$-color-9: sage-color(grey, 900);
 // Comments of various sorts
-$-color-3: sage-color(charcoal, 300);
+$-color-3: sage-color(grey, 800);
 // Subheading
 $-color-12: sage-color(red, 500);
 // Constant
@@ -29,7 +29,7 @@ $-color-25: sage-color(orange, 200);
 // Regex/interpolation
 $-color-26: sage-color(orange, 200);
 // Preproc comment
-$-color-7: sage-color(charcoal, 300);
+$-color-7: sage-color(grey, 800);
 // Highlight?
 $-color-2: sage-color(yellow, 150);
 // Name label
