--- a/docs/lib/sage-frontend/stylesheets/docs/_specs.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_specs.scss
@@ -7,7 +7,7 @@
 .sage-specs {
   th {
     padding: 4px;
-    color: sage-color(charcoal, 200);
+    color: sage-color(grey, 700);
     border-bottom: 1px solid sage-color(grey, 300);
   }
 
