--- a/docs/lib/sage-frontend/stylesheets/docs/_status_key.scss
+++ b/docs/lib/sage-frontend/stylesheets/docs/_status_key.scss
@@ -52,7 +52,7 @@
     margin-left: sage-spacing(xs);
     font-size: sage-font-size(body-sm);
     font-weight: sage-font-weight(semibold);
-    color: sage-color(charcoal, 200);
+    color: sage-color(grey, 700);
   }
 
   @media screen and (min-width: sage-breakpoint(lg-min)) {
