--- a/packages/sage-assets/lib/stylesheets/components/_badge.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_badge.scss
@@ -41,7 +41,7 @@ $-badge-statuses: (
   max-width: 100%;
   min-height: $-badge-min-height;
   padding: $-badge-padding;
-  color: sage-color(charcoal, 500);
+  color: sage-color(grey, 950);
   white-space: nowrap;
   background-color: transparent;
   border-radius: $-badge-border-radius;
