--- a/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_copy_text.scss
@@ -8,8 +8,8 @@
 $-copy-text-border: 1px solid sage-color(grey, 400);
 $-copy-text-border-focus-color: sage-color(purple, 300);
 $-copy-text-border-hover-color: sage-color(grey, 500);
-$-copy-text-color: sage-color(charcoal, 400);
-$-copy-text-color-hover: sage-color(charcoal, 500);
+$-copy-text-color: sage-color(grey, 900);
+$-copy-text-color-hover: sage-color(grey, 950);
 
 
 .sage-copy-text {
