--- a/packages/sage-assets/lib/stylesheets/components/_hint.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_hint.scss
@@ -5,7 +5,7 @@
 ////
 
 // Colors
-$-hint-text-color: sage-color(charcoal, 400);
+$-hint-text-color: sage-color(grey, 900);
 $-hint-background-color: sage-color(grey, 200);
 
 .sage-hint {
