--- a/packages/sage-assets/lib/stylesheets/components/_indicator.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_indicator.scss
@@ -35,5 +35,5 @@ $-indicator-size: rem(6px);
 }
 
 .sage-indicator--current {
-  background-color: sage-color(charcoal, 400);
+  background-color: sage-color(grey, 900);
 }
