--- a/packages/sage-assets/lib/stylesheets/components/_input_group.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_input_group.scss
@@ -80,7 +80,7 @@ $-input-group-pw-field-button-color-text-hover: sage-color(black);
   }
 
   .sage-input-group--disabled & {
-    color: sage-color(charcoal, 300);
+    color: sage-color(grey, 800);
     background-color: sage-color(grey, 150);
   }
 }
