--- a/packages/sage-assets/lib/stylesheets/components/_nav.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_nav.scss
@@ -4,7 +4,7 @@
 /// @group sage
 ////
 
-$-nav-color-text: sage-color(charcoal, 300);
+$-nav-color-text: sage-color(grey, 800);
 $-nav-color-focus: sage-color(grey, 500);
 $-nav-color-background: sage-color(grey, 200);
 $-nav-color-background-hover: sage-color(grey, 200);
