--- a/packages/sage-assets/lib/stylesheets/components/_search.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_search.scss
@@ -23,7 +23,7 @@ $-search-icon: "::before";
     z-index: sage-z-index(default, 2);
     margin-left: sage-spacing(sm);
     margin-right: -1 * sage-spacing(lg);
-    color: sage-color(charcoal, 200);
+    color: sage-color(grey, 700);
     transition: map-get($sage-transitions, default);
     transition-property: color;
   }
@@ -33,7 +33,7 @@ $-search-icon: "::before";
 
     &:hover {
       background-color: sage-color(grey, 100);
-      border-bottom-color: sage-color(charcoal, 100);
+      border-bottom-color: sage-color(grey, 600);
     }
 
     &:focus-within {
@@ -150,7 +150,7 @@ $-search-icon: "::before";
   @extend %t-sage-body;
 
   @include placeholder {
-    color: sage-color(charcoal, 200);
+    color: sage-color(grey, 700);
   }
 
   &:focus {
@@ -159,7 +159,7 @@ $-search-icon: "::before";
 
   &:hover:not(:disabled) {
     background-color: sage-color(grey, 100);
-    border-bottom-color: sage-color(charcoal, 100);
+    border-bottom-color: sage-color(grey, 600);
     box-shadow: none;
   }
 
