--- a/packages/sage-assets/lib/stylesheets/global/_reboot.scss
+++ b/packages/sage-assets/lib/stylesheets/global/_reboot.scss
@@ -66,7 +66,7 @@ h6,
 .t-sage-heading-6 {
   margin-top: 0;
   margin-bottom: 0;
-  color: sage-color(charcoal, 500);
+  color: sage-color(grey, 950);
   font-family: "GreetStandard", "Inter", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", "Roboto", "Ubuntu", sans-serif ;
 }
 
