--- a/packages/sage-assets/lib/stylesheets/components/_alert.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_alert.scss
@@ -22,8 +22,8 @@ $-alert-background-colors: (
 );
 
 $-alert-icon-colors: (
-  default: sage-color(charcoal, 200),
-  draft: sage-color(charcoal, 200),
+  default: sage-color(grey, 700),
+  draft: sage-color(grey, 700),
   info: sage-color(primary, 300),
   published: sage-color(sage, 300),
   success: sage-color(sage, 300),
@@ -119,7 +119,7 @@ $-alert-border-colors: (
 
 .sage-alert__title {
   @extend %t-sage-heading-5;
-  color: sage-color(charcoal, 500);
+  color: sage-color(grey, 950);
 }
 
 .sage-alert__title--add-on {
@@ -164,11 +164,11 @@ $-alert-border-colors: (
     @extend %t-sage-body-med;
     @include sage-focus-outline($outline-offset-inline: 4px);
 
-    color: sage-color(charcoal, 400);
+    color: sage-color(grey, 900);
     text-decoration: none;
 
     &:hover {
-      color: sage-color(charcoal, 500);
+      color: sage-color(grey, 950);
       text-decoration: underline;
     }
 
@@ -191,11 +191,11 @@ $-alert-border-colors: (
   a:not([class*="sage-"]) {
     @include sage-focus-outline($outline-offset-inline: 4px);
 
-    color: sage-color(charcoal, 400);
+    color: sage-color(grey, 900);
     text-decoration: underline;
 
     &:hover {
-      color: sage-color(charcoal, 500);
+      color: sage-color(grey, 950);
       text-decoration: none;
     }
 
