--- a/packages/sage-assets/lib/stylesheets/components/_avatar.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_avatar.scss
@@ -9,11 +9,11 @@ $-avatar-min-size: rem(32px);
 $-avatar-max-size: rem(128px);
 $-avatar-ring-colors: (
   charcoal: (
-    main: sage-color(charcoal, 500),
+    main: sage-color(grey, 950),
     bg: sage-color(grey, 200)
   ),
   grey: (
-    main: sage-color(charcoal, 500),
+    main: sage-color(grey, 950),
     bg: sage-color(grey, 200)
   ),
   purple: (
