--- a/packages/sage-assets/lib/stylesheets/components/_checkbox.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_checkbox.scss
@@ -9,11 +9,11 @@
 //
 $-checkbox-color-default: sage-color(grey, 500);
 $-checkbox-color-default-border: sage-color(grey, 300);
-$-checkbox-color-checked: sage-color(charcoal, 400);
-$-checkbox-color-checked-hover: sage-color(charcoal, 500);
+$-checkbox-color-checked: sage-color(grey, 900);
+$-checkbox-color-checked-hover: sage-color(grey, 950);
 $-checkbox-color-disabled: sage-color(grey, 150);
 $-checkbox-color-disabled-border: sage-color(grey, 200);
-$-checkbox-color-disabled-checked: sage-color(charcoal, 100);
+$-checkbox-color-disabled-checked: sage-color(grey, 600);
 $-checkbox-color-error: sage-color(red, 500);
 
 $-checkbox-size: rem(16px);
@@ -80,7 +80,7 @@ $-checkbox-focus-outline-color: sage-color(purple, 30);
 
     &:hover {
       z-index: sage-z-index(default, 1);
-      border-color: sage-color(charcoal, 100);
+      border-color: sage-color(grey, 600);
     }
 
     &:focus-within {
