--- a/packages/sage-assets/lib/stylesheets/components/_menu_button.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_menu_button.scss
@@ -55,7 +55,7 @@ $-menubtn-focus-outline-color: currentColor;
 
     &:focus::after {
       transform: translate3d(-50%, -50%, 0) scale(1);
-      border-color: sage-color(charcoal, 100);
+      border-color: sage-color(grey, 600);
       opacity: 1;
     }
 
@@ -64,7 +64,7 @@ $-menubtn-focus-outline-color: currentColor;
     }
 
     &:active::after {
-      border-color: sage-color(charcoal, 200);
+      border-color: sage-color(grey, 700);
     }
 
     &[aria-expanded="true"]::after {
