--- a/packages/sage-assets/lib/stylesheets/components/_toast.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_toast.scss
@@ -73,7 +73,7 @@ $-toast-bottom-spacing: sage-spacing(xs);
   color: sage-color(white);
   border-radius: sage-border(radius-medium);
   box-shadow: sage-shadow(lg);
-  background-color: sage-color(charcoal, 400);
+  background-color: sage-color(grey, 900);
   animation: 0.5s ease;
 
   @media #{$-toast-breakpoint-default} {
