--- a/packages/sage-assets/lib/stylesheets/components/_transaction_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_transaction_card.scss
@@ -87,7 +87,7 @@ $-transaction-card-price-max-width: rem(100px);
   @extend %t-sage-body-small;
 
   max-width: $-transaction-card-state-max-width;
-  color: sage-color(charcoal, 400);
+  color: sage-color(grey, 900);
 }
 
 .sage-transaction-card__state--red {
