--- a/packages/sage-assets/lib/stylesheets/components/_upload_card.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_upload_card.scss
@@ -29,10 +29,10 @@ $-upload-card-mobile-breakpoint: 609px;
   justify-content: flex-start;
   flex: 1 1;
   gap: sage-spacing();
-  color: sage-color(charcoal, 200);
+  color: sage-color(grey, 700);
 
   .sage-upload-card--selected & {
-    color: sage-color(charcoal, 300);
+    color: sage-color(grey, 800);
   }
 
   .sage-upload-card--error & {
@@ -100,7 +100,7 @@ $-upload-card-mobile-breakpoint: 609px;
 
 .sage-upload-card__icon {
   display: inline-flex;
-  color: sage-color(charcoal, 100);
+  color: sage-color(grey, 600);
 
   .sage-upload-card:not(.sage-uploaded-card--selected) & {
     margin-bottom: sage-spacing(2xs);
@@ -142,5 +142,5 @@ $-upload-card-mobile-breakpoint: 609px;
   flex-direction: column;
   align-items: flex-start;
   gap: sage-spacing(sm);
-  color: sage-color(charcoal, 200);
+  color: sage-color(grey, 700);
 }
