--- a/packages/sage-assets/lib/stylesheets/core/_variables.scss
+++ b/packages/sage-assets/lib/stylesheets/core/_variables.scss
@@ -52,7 +52,7 @@ $sage-field-configs: (
 ///
 $sage-field-colors: (
   border: sage-color(grey, 300),
-  default: sage-color(charcoal, 300),
+  default: sage-color(grey, 800),
   disabled: sage-color(grey, 500),
   disabled-background: sage-color(grey, 150),
   error: sage-color(red, 500),
@@ -66,9 +66,9 @@ $sage-field-colors: (
 /// Radio button colors
 ///
 $sage-radio-colors: (
-  checked: sage-color(charcoal, 400),
+  checked: sage-color(grey, 900),
   checked-disabled: sage-color(grey, 200),
-  checked-hover: sage-color(charcoal, 500),
+  checked-hover: sage-color(grey, 950),
   checked-inner: sage-color(white),
   default: sage-color(grey, 300),
   disabled: sage-color(grey, 150),
@@ -85,17 +85,17 @@ $sage-radio-size: rem(16px);
 /// Tab colors shared by components such as tabs and choices
 ///
 $sage-tab-colors: (
-  default: sage-color(charcoal, 300),
-  active: sage-color(charcoal, 400),
-  disabled: sage-color(charcoal, 100),
+  default: sage-color(grey, 800),
+  active: sage-color(grey, 900),
+  disabled: sage-color(grey, 600),
 );
 
 ///
 /// Standard text colors
 ///
 $sage-text-colors: (
-  body: sage-color(charcoal, 400),
-  heading: sage-color(charcoal, 500),
+  body: sage-color(grey, 900),
+  heading: sage-color(grey, 950),
 );
 
 ///
