style(tab): adjust tab underline variable value

--- a/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
+++ b/packages/sage-assets/lib/stylesheets/core/mixins/_sage.scss
@@ -670,7 +670,7 @@
   $item-underline: "after";
 
   &::#{$item-underline} {
-    $spacing-off: 50%;
+    $spacing-off: calc(50% + #{sage-letter-spacing(lg)});
 
     content: "";
     position: absolute;
