--- a/packages/sage-assets/lib/stylesheets/components/_pagination.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_pagination.scss
@@ -8,10 +8,10 @@
 $-pagination-size: rem(40px);
 $-pagination-padding-arrows: rem(10px) rem(12px);
 $-pagination-radius: sage-border(radius-round);
-$-pagination-text-color: sage-color(charcoal, 400);
-$-pagination-text-color-disabled: sage-color(charcoal, 100);
-$-pagination-bg-color-current: sage-color(grey, 200);
-$-pagination-bg-color-hover: sage-color(grey, 300);
+$-pagination-text-color: sage-color(grey, 900);
+$-pagination-text-color-disabled: sage-color(grey, 600);
+$-pagination-bg-color-current: sage-color(grey, 150);
+$-pagination-bg-color-hover: sage-color(grey, 150);
 $-pagination-focus-ring-color: sage-color(purple, 300);
 
 
