--- a/packages/sage-assets/lib/stylesheets/layout/_frame.scss
+++ b/packages/sage-assets/lib/stylesheets/layout/_frame.scss
@@ -234,6 +234,7 @@ $-sage-frame-wrap: none;
   .sage-frame--border-#{$-key} {
     background-color: sage-color(white);
     border: #{$-val};
+    box-shadow: sage-shadow(100);
   }
 }
 
