--- a/packages/sage-assets/lib/stylesheets/components/_alert.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_alert.scss
@@ -153,7 +153,7 @@ $-alert-icon-colors: (
     }
 
     &:focus {
-      @include sage-focus-outline--update-color(sage-color(primary, 200));
+      @include sage-focus-outline--update-color(sage-color(purple, 30));
     }
   }
 
@@ -180,7 +180,7 @@ $-alert-icon-colors: (
     }
 
     &:focus {
-      @include sage-focus-outline--update-color(sage-color(primary, 200));
+      @include sage-focus-outline--update-color(sage-color(purple, 30));
     }
   }
 
