--- a/packages/sage-assets/lib/stylesheets/components/_tab.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_tab.scss
@@ -45,7 +45,7 @@ $-tab-color-disabled: map-get($sage-tab-colors, disabled);
   &:focus {
     z-index: sage-z-index(default, 1);
     outline: none;
-    box-shadow: 0 0 0 4px sage-color(primary, 200);
+    box-shadow: 0 0 0 1px white, 0 0 0 4px sage-color(purple, 30);
     border-radius: sage-border(radius-small);
 
     .sage-tabs--filter & {
