--- a/packages/sage-assets/lib/stylesheets/components/_choice.scss
+++ b/packages/sage-assets/lib/stylesheets/components/_choice.scss
@@ -66,7 +66,7 @@ $-choice-radio-color-checked-inner: map-get($sage-radio-colors, checked-inner);
   }
 
   &:focus {
-    border-color: sage-color(primary, 200);
+    border-color: sage-color(purple, 30);
     outline: none;
   }
 
@@ -77,6 +77,7 @@ $-choice-radio-color-checked-inner: map-get($sage-radio-colors, checked-inner);
       border-color: sage-color(charcoal, 400);
       border-width: rem(4px);
     }
+
   }
 
   &[aria-disabled="true"],
