--- a/docs/app/views/examples/components/form_select/_props.html.erb
+++ b/docs/app/views/examples/components/form_select/_props.html.erb
@@ -11,6 +11,12 @@
   <td><%= md('`false`') %></td>
 </tr>
 <tr>
+  <td><%= md('`help_content`') %></td>
+  <td><%= md('Sets the content for the "help content" area adjacent to the select\'s label') %></td>
+  <td><%= md('String') %></td>
+  <td><%= md('`nil`') %></td>
+</tr>
+<tr>
   <td><%= md('`message`') %></td>
   <td><%= md('Displays the message text for the component.') %></td>
   <td><%= md('String') %></td>
